@@ -7,6 +7,7 @@
     * Tracked topics are now integrated into GameFOX
     * Disable all tag-related preferences by default
     * Numerous performance improvements
+    * New CSS: Capitalized Message Links
 
 2008-12-26:
     * version 0.6.9
